@@ -126,7 +126,7 @@ common::Error IDriver::execute(FastoObjectCommand* cmd) {
 
   LOG_COMMAND(type(), Command(icmd));
   int argc;
-  sds* argv = sdssplitargs(ccommand, &argc);
+  sds* argv = sdssplitargslong(ccommand, &argc);
   if (!argv) {
     return common::make_error_value("Invalid input argument(s)", common::ErrorValue::E_ERROR);
   }
